# ScriptSense

./: .gitignore  CONTRIBUTING.md  Justfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  convert.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/schemas/: __init__.py
backend/app/services/: conversion.py  file_creation.py  handwriting_detection.py  image_processing.py  line_detection.py  nlp_layer.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CameraModal.jsx  ConversionDetailsModal.jsx  HistoryCard.jsx  ImageUploader.jsx  Navbar.jsx  ProgressOverlay.jsx  ResultsSection.jsx  SettingsPanel.jsx  ThemeToggle.jsx
frontend/src/hooks/: useConversion.js  useHistory.js  useTheme.js
frontend/src/pages/: AppPage.jsx  HistoryPage.jsx  LandingPage.jsx
frontend/src/services/: api.js  db.js
model/: README.md  environment.yml  pyproject.toml
model/configs/: config.yml
model/notebooks/: PROJECT_MODEL.ipynb
model/src/model/: evaluate.py  predict.py  preprocess.py  train.py
scripts/: save_model_locally.py
