[project]
name = "dsa-group-3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.0",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "opencv-python-headless>=4.10.0.84",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "roboflow>=1.3.8",
    "reportlab>=4.0.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "ultralytics>=8.4.48",
]

[tool.uv.workspace]
members = ["backend", "model"]
