[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "model",
]

[tool.uv.sources]
model = { workspace = true }
